# qpid-request-reply-wrapper

./: CMakeLists.txt
include/: amqp_consumer.hpp  amqp_producer.hpp
src/: amqp_consumer.cpp  amqp_producer.cpp  main.cpp
